<resources>
    <string name="app_name">Learn German</string>
    <string name="act_learn">Learn!</string>
    <string name="act_picture_puzzel">Picture Puzzel</string>
    <string name="act_context">Context</string>
    <string name="act_cue_cards">Ĉue Cards</string>
    <string name="act_definition">Definitions</string>
    <string name="act_numbers">Numbers</string>
    <string name="act_sayings">Sayings</string>
    <string name="act_categories">Categories</string>
    <string name="act_settings">Settings</string>
    <string name="act_progress">Progress</string>
    <string name="act_synonyms">Synonyms</string>
    <string name="act_infos">Links and Infos</string>
    <string name="act_about">About</string>
    <string name="expand_wordfields">Choose Wordfields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
